syntax = "proto3";

package serenno.authGuestResponse;

option java_multiple_files = true;

message AuthGuestResponse {
    string auth_id = 1 ;
    string auth_token = 2 ;
}
