syntax = "proto3";

package serenno.playerProfileRequest;

option java_multiple_files = true;

message PlayerProfileRequest {
    string player_id = 1 ;
    string ally_code = 2 ;
}
